# BFXPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fractureUI.mel
BFXPlugin/: CMakeLists.txt
BFXPlugin/src/: BFXCmd.cpp  BFXCmd.h  NodeCmd.cpp  NodeCmd.h  NodePlacer.cpp  NodePlacer.h  NodePlacerNode.h  PluginMain.cpp
src/: CompoundMesh.cpp  CompoundMesh.h  CompoundNode.cpp  CompoundNode.h  ConvexMesh.cpp  ConvexMesh.h  FractureCmd.cpp  FractureCmd.h  NodeCmd.cpp  NodeCmd.h  NodePlacer.cpp  NodePlacer.h  NodePlacerNode.cpp  PluginMain.cpp  PreprocessCmd.cpp  PreprocessCmd.h
